--- a/build.properties
+++ b/build.properties
@@ -4,17 +4,17 @@ impl.title=Pentaho SequoiaDB Plugin
 impl.productID=pentaho-sequoiadb-plugin
 ivy.artifact.id=pentaho-sequoiadb-plugin
 ivy.artifact.group=pentaho
-project.revision=TRUNK-SNAPSHOT
+project.revision=7.1-SNAPSHOT
 
 junit.maxmemory=500M
 
-dependency.kettle.revision=TRUNK-SNAPSHOT
+dependency.kettle.revision=${project.revision}
 kettle-distrib-artifact-name=pdi-ce-${dependency.kettle.revision}
 kettle-distrib-with-plugin-name=${kettle-distrib-artifact-name}-big-data
 
-dependency.pentaho-xul.revision=TRUNK-SNAPSHOT
+dependency.pentaho-xul.revision=${project.revision}
 
-dependency.pentaho-metastore.revision=TRUNK-SNAPSHOT
+dependency.pentaho-metastore.revision=${project.revision}
 
 dependency.sequoiadb-driver.revision=1.12
 
